# GC-Adapter-RP2040

./: .gitignore  .gitmodules  README.md
FW/: CMakeLists.txt  manifest.json  oldCMakeLists.txt
FW/include/: adapter.h  adapter_config.h  adapter_defines.h  adapter_includes.h  adapter_multicore_flags.h  adapter_settings.h  adapter_types.h  main.h
FW/include/devices/: gamecube.h  gcinput.h  serial_cdc.h  swpro.h  webusb.h  xinput.h
FW/include/switch/: switch_commands.h  switch_spi.h
FW/include/usb/: adapter_usb.h  desc_bos.h  ginput_device.h  tusb_config.h  xinput_device.h
FW/include/utilities/: rgb.h  wd_scratch.h
FW/pio/: joybus.pio
FW/src/: adapter.c  adapter_defines.c  adapter_rumble.c  adapter_settings.c  joybus_itf.c  main.c  rgb_itf.c
FW/src/devices/: gamecube.c  gcinput.c  serial_cdc.c  swpro.c  webusb.c  xinput.c
FW/src/switch/: switch_commands.c  switch_spi.c
FW/src/usb/: adapter_usb.c  desc_bos.c  ginput_device.c  xinput_device.c
FW/src/utilities/: rgb.c  wd_scratch.c
PCB/: GCP-2.csv  GCP-2.kicad_pcb  GCP-2.kicad_prl  GCP-2.kicad_pro  GCP-2.kicad_sch  GCP-2.xml  fp-info-cache  gc_adapter_rp2040.uf2
Production/3D/: Button.iges  Button.step  LowerShell.iges  LowerShell.step  LowerShell.stp  UpperShell.iges  UpperShell.step  UpperShell.stp
Production/3D/Fusion Exports/: LowerShell.step
Production/3D/Plasticity/: GCP Shell Drafted.plasticity
Production/3D/Plasticity/plasticity/: GCP Shell Drafted_day1.plasticity  GCP Shell Drafted_hour1.plasticity  GCP Shell Drafted_hour2.plasticity  GCP Shell Drafted_prev1.plasticity
Production/PCB/: GCP-2_bom.xlsx
Production/PCB/gerber/: GCP-2-B_Cu.gbr  GCP-2-B_Mask.gbr  GCP-2-B_Paste.gbr  GCP-2-B_Silkscreen.gbr  GCP-2-Edge_Cuts.gbr  GCP-2-F_Cu.gbr  GCP-2-F_Mask.gbr  GCP-2-F_Paste.gbr  GCP-2-F_Silkscreen.gbr  GCP-2-In1_Cu.gbr  GCP-2-In2_Cu.gbr  GCP-2-NPTH-drl_map.gbr  GCP-2-NPTH.drl  GCP-2-PTH-drl_map.gbr  GCP-2-PTH.drl  GCP-2-job.gbrjob
Production/PCB/placement/: GCP-2-bottom.pos  GCP-2-top.pos
